--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 GOOGLE_GENAI_API_KEY=AIzaSyBdgDeZHQIhJRKRb-ZXZ4D83N80X5eEnqo
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dW5iaWFzZWQtcGFuZ29saW4tNzQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_qO08qrfIPlX3SjCWHbri8JubIHhTQnkcPePHd7tg0e
+
